# hybrid-modelling-of-batch-bioreactors

./: Application1_Martinez_et_al_2025.ipynb  Application_1_Ecoli_2026.ipynb  Application_2_yeast_2026.ipynb  LICENSE  README.md  pyproject.toml
hybrid_bioreactors/: __init__.py  training.py
