[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hybrid-bioreactors"
version = "0.1.0"
description = "Utilities for training user-defined hybrid models on batch bioreactor data."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Hybrid Modelling Team" }]
dependencies = ["pandas>=1.5"]

[project.urls]
Homepage = "https://example.com"
